--- a/Actividad1/app/src/main/AndroidManifest.xml
+++ b/Actividad1/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.luocz.primerproyecto">
+    package="com.luocz.primerproyecto" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PrimerProyecto">
+        android:theme="@style/Theme.PrimerProyecto" >
         <!-- Ejercicios de Clases -->
         <activity
             android:name=".EjerciciosClase.ExplicitActivity"
@@ -23,17 +23,22 @@
             android:name=".EjerciciosClase.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".EjerciciosClase.FrameLayoutActivity"
+            android:name=".EjerciciosClase.Layouts.FrameLayoutActivity"
             android:exported="false" />
         <activity
             android:name=".EjerciciosClase.ImplicityActivity2"
             android:exported="false" />
-         <activity
-             android:name=".EjerciciosClase.LinearLayoutActivity"
+        <activity
+            android:name=".EjerciciosClase.Layouts.LinearLayoutActivity"
             android:exported="false" />
-        <!--  <activity
+        <activity
+            android:name=".EjerciciosClase.Layouts.RelativityActivity"
+            android:exported="false" />
+        <!--
+  <activity
              android:name=".EjerciciosClase.Layouts.RelativityActivity"
-             android:exported="false" />-->
+             android:exported="false" />
+        -->
         <!-- Ejercicio 1 -->
         <activity
             android:name=".Ejercicio1.FormActivity"
@@ -42,8 +47,8 @@
             android:name=".Ejercicio1.DetailActivity"
             android:exported="false" /> <!-- MAIN -->
         <activity
-            android:name=".EjerciciosClase.Layouts.RelativityActivity"
-            android:exported="true">
+            android:name=".EjerciciosClase.RecycleView.RecyclerViewActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
